# knowledge

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
fowoco-knowledge/: CHANGELOG.md  README.md  pyproject.toml
fowoco-knowledge/data/: dataset_manifest.yaml  provenance.yaml
fowoco-knowledge/docs/: AGENT_INTEGRATION.md  BUSINESS_EVIDENCE.md  COACH_FEEDBACK_ACTIONS.md  DATA_GUIDE.md  DATA_OPERATIONS.md  DATA_PROTECTION.md  DATA_SOURCE_INTAKE.md  DATA_WORK_BREAKDOWN.md  E9_REPORTING_WORKFLOWS.md  EXPERT_REVIEW.md  INTENT_DATA.md  LABELING_GUIDE_V1.md  MODEL_PLAN.md  OFFICIAL_DATA_PIPELINE.md  OUTPUT_QUALITY.md  REVIEWER_GUIDE_KO.md  SOURCE_POLICY.md
fowoco-knowledge/examples/: ambiguous_document_request.json  complete_document_request.json  high_risk_stay_request.json  llm_payload_with_pii.json  notice_quality_check.json
fowoco-knowledge/knowledge/: administrative_procedures.yaml  ambiguity_patterns.yaml  data_protection.yaml  document_checklists.yaml  domains.yaml  easy_korean_rules.yaml  guardrail_rules.yaml  intents.yaml  manifest.yaml  multilingual_templates.yaml  official_links.yaml  output_quality_policy.yaml  required_slots.yaml  workflow_catalog.yaml
fowoco-knowledge/schemas/: agent-analysis.schema.json  agent-request.schema.json  data-protection-policy.schema.json  dataset-manifest.schema.json  golden-case.schema.json  notice-quality-case.schema.json  output-quality-policy.schema.json  workflow-catalog.schema.json
fowoco-knowledge/tests/: test_dataset.py  test_engine.py  test_ingestion.py  test_privacy.py  test_quality.py  (+3 more)
(+43 files in other folders)
